# sdkwork-merchandise

./: .env.example  AGENTS.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sdkwork.app.config.json  sdkwork.workflow.json  tsconfig.base.json  tsconfig.json  vitest.config.ts
apis/app-api/merchandise/: merchandise-app-api.openapi.json
apis/backend-api/merchandise/: merchandise-backend-api.openapi.json  shop-backend-api.merchandise.openapi.json
apps/: README.md
apps/sdkwork-merchandise-common/: README.md
apps/sdkwork-merchandise-pc/: AGENTS.md  index.html  package.json  sdkwork.app.config.json  tsconfig.json
apps/sdkwork-merchandise-pc/docs/: INDEX.yaml  README.md
apps/sdkwork-merchandise-pc/etc/: sdkwork.deployment.config.json
apps/sdkwork-merchandise-pc/specs/: dependency.composition.json
apps/sdkwork-merchandise-pc/src/: main.tsx  styles.css
configs/: sdkwork-api-cloud-gateway.merchandise.development.toml  sdkwork-api-cloud-gateway.merchandise.production.toml
configs/topology/: cloud.development.env  cloud.production.env  cloud.split-services.development.env  cloud.split-services.production.env  cloud.unified-process.development.env  cloud.unified-process.production.env  standalone.development.env  standalone.production.env  standalone.split-services.development.env  standalone.split-services.production.env  standalone.unified-process.development.env  standalone.unified-process.production.env
crates/sdkwork-api-merchandise-assembly/: Cargo.toml  assembly-manifest.json
crates/sdkwork-api-merchandise-assembly/specs/: README.md  component.spec.json
crates/sdkwork-api-merchandise-assembly/src/: bootstrap.rs  generated.rs  lib.rs
crates/sdkwork-api-merchandise-standalone-gateway/: Cargo.toml
crates/sdkwork-api-merchandise-standalone-gateway/src/: main.rs
crates/sdkwork-commerce-merchandise-repository-sqlx/: Cargo.toml
crates/sdkwork-commerce-merchandise-repository-sqlx/src/: postgres_catalog.rs  runtime_repository.rs  sqlite_catalog.rs
crates/sdkwork-commerce-merchandise-service/: Cargo.toml  README.md
crates/sdkwork-commerce-merchandise-service/specs/: README.md  component.spec.json
crates/sdkwork-commerce-merchandise-service/src/: lib.rs
crates/sdkwork-commerce-merchandise-service/src/commands/: mod.rs
crates/sdkwork-commerce-merchandise-service/src/domain/: mod.rs
crates/sdkwork-commerce-merchandise-service/src/ports/: mod.rs
crates/sdkwork-commerce-merchandise-service/tests/: catalog_standard.rs
crates/sdkwork-merchandise-api-server/: Cargo.toml
crates/sdkwork-merchandise-api-server/src/: lib.rs  main.rs
crates/sdkwork-merchandise-database-host/: Cargo.toml
crates/sdkwork-merchandise-database-host/src/: lib.rs
crates/sdkwork-merchandise-gateway-assembly/: Cargo.toml  assembly-manifest.json
crates/sdkwork-merchandise-gateway-assembly/src/: bootstrap.rs  generated.rs  lib.rs
crates/sdkwork-merchandise-repository-sqlx/: Cargo.toml  README.md
crates/sdkwork-merchandise-repository-sqlx/specs/: README.md  component.spec.json
crates/sdkwork-merchandise-repository-sqlx/src/: lib.rs  postgres_catalog.rs  runtime_repository.rs  single_sku_merchandise.rs  sqlite_catalog.rs
crates/sdkwork-merchandise-service/: Cargo.toml  README.md
crates/sdkwork-merchandise-service-host/: Cargo.toml
crates/sdkwork-merchandise-service-host/src/: lib.rs
crates/sdkwork-merchandise-service/specs/: README.md
crates/sdkwork-merchandise-service/src/commands/: mod.rs
crates/sdkwork-merchandise-service/src/domain/: mod.rs
crates/sdkwork-merchandise-service/src/ports/: mod.rs  single_sku_merchandise.rs
crates/sdkwork-merchandise-service/src/queries/: mod.rs
crates/sdkwork-merchandise-service/src/service/: mod.rs  single_sku_merchandise.rs
crates/sdkwork-merchandise-service/tests/: catalog_standard.rs
crates/sdkwork-merchandise-standalone-gateway/: Cargo.toml
crates/sdkwork-merchandise-standalone-gateway/src/: main.rs
crates/sdkwork-merchandise-web-support/: Cargo.toml
crates/sdkwork-merchandise-web-support/specs/: component.spec.json
crates/sdkwork-merchandise-web-support/src/: backend_catalog_router.rs  catalog_store.rs  http_envelope.rs  lib.rs  subject.rs
crates/sdkwork-router-merchandise-app-api/: Cargo.toml
crates/sdkwork-router-merchandise-app-api/src/: backend_catalog_router.rs  http_route_manifest.rs  lib.rs  paths.rs  routes.rs  web_bootstrap.rs
crates/sdkwork-router-merchandise-backend-api/: Cargo.toml
crates/sdkwork-router-merchandise-backend-api/src/: lib.rs  routes.rs  web_bootstrap.rs
crates/sdkwork-routes-merchandise-app-api/: Cargo.toml
crates/sdkwork-routes-merchandise-app-api/specs/: component.spec.json
crates/sdkwork-routes-merchandise-app-api/src/: backend_catalog_router.rs  catalog_store.rs  http_envelope.rs  lib.rs  routes.rs  subject.rs  web_bootstrap.rs
crates/sdkwork-routes-merchandise-backend-api/: Cargo.toml
crates/sdkwork-routes-merchandise-backend-api/specs/: component.spec.json
crates/sdkwork-routes-merchandise-backend-api/src/: http_route_manifest.rs  lib.rs  routes.rs  web_bootstrap.rs
database/: README.md  database.manifest.json
database/contract/: schema.yaml
database/seeds/: seed.manifest.json
database/seeds/common/: 001_bootstrap.sql
docs/: INDEX.yaml  README.md
docs/architecture/tech/: README.md  TECH_ARCHITECTURE.md
docs/changelogs/: CHANGELOG.md  README.md
docs/product/prd/: PRD.md  README.md
etc/: sdkwork-api-cloud-gateway.merchandise.development.toml  sdkwork-api-cloud-gateway.merchandise.production.toml
sdks/_route-manifests/app-api/: sdkwork-merchandise-api-server.route-manifest.json
sdks/_route-manifests/backend-api/: sdkwork-routes-merchandise-backend-api.route-manifest.json
specs/: README.md  component.spec.json  iam.module.manifest.json  topology.spec.json
tests/contract/: database-framework.contract.test.mjs
tests/static/: merchandise-architecture.test.mjs
tools/: merchandise_openapi_export.mjs  merchandise_route_manifest_export.mjs  merchandise_sdk_generate.mjs  scaffold_merchandise_workspace.mjs
(+9 files in other folders)
