[workspace]
resolver = "2"
members = [
    "crates/sdkwork-api-merchandise-assembly",
    "crates/sdkwork-merchandise-gateway-assembly",
  "crates/sdkwork-merchandise-service",
  "crates/sdkwork-merchandise-repository-sqlx",
  "crates/sdkwork-routes-merchandise-app-api",
  "crates/sdkwork-routes-merchandise-backend-api",
  "crates/sdkwork-merchandise-database-host",
  "crates/sdkwork-merchandise-service-host",
  "crates/sdkwork-merchandise-standalone-gateway",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "UNLICENSED"
publish = false

[workspace.dependencies]
axum = "0.8"
tokio = { version = "1.51", features = ["macros", "rt-multi-thread", "net", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres", "sqlite", "uuid", "chrono"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15"
thiserror = "1"
async-trait = "0.1"
sdkwork_contract_service = { path = "../sdkwork-account/crates/sdkwork-contract-service", package = "sdkwork-contract-service" }
sdkwork-web-core = { path = "../sdkwork-web-framework/crates/sdkwork-web-core" }
sdkwork-web-axum = { path = "../sdkwork-web-framework/crates/sdkwork-web-axum" }
sdkwork-web-contract = { path = "../sdkwork-web-framework/crates/sdkwork-web-contract" }
sdkwork-web-bootstrap = { path = "../sdkwork-web-framework/crates/sdkwork-web-bootstrap" }
sdkwork-iam-web-adapter = { path = "../sdkwork-iam/crates/sdkwork-iam-web-adapter" }
sdkwork-iam-context-service = { path = "../sdkwork-iam/crates/sdkwork-iam-context-service" }
sdkwork-utils-rust = { path = "../sdkwork-utils/packages/sdkwork-utils-rust" }
sdkwork-database-config = { path = "../sdkwork-database/crates/sdkwork-database-config" }
sdkwork-database-id = { path = "../sdkwork-database/crates/sdkwork-database-id" }
sdkwork-database-lifecycle = { path = "../sdkwork-database/crates/sdkwork-database-lifecycle" }
sdkwork-database-spi = { path = "../sdkwork-database/crates/sdkwork-database-spi" }
sdkwork-database-sqlx = { path = "../sdkwork-database/crates/sdkwork-database-sqlx" }
sdkwork-database-ops-http = { path = "../sdkwork-database/crates/sdkwork-database-ops-http" }
sdkwork_merchandise_service = { path = "crates/sdkwork-merchandise-service", package = "sdkwork-merchandise-service" }
sdkwork_merchandise_repository_sqlx = { path = "crates/sdkwork-merchandise-repository-sqlx", package = "sdkwork-merchandise-repository-sqlx" }
sdkwork_routes_merchandise_app_api = { path = "crates/sdkwork-routes-merchandise-app-api", package = "sdkwork-routes-merchandise-app-api" }
sdkwork_routes_merchandise_backend_api = { path = "crates/sdkwork-routes-merchandise-backend-api", package = "sdkwork-routes-merchandise-backend-api" }
sdkwork_merchandise_database_host = { path = "crates/sdkwork-merchandise-database-host", package = "sdkwork-merchandise-database-host" }
sdkwork_merchandise_service_host = { path = "crates/sdkwork-merchandise-service-host", package = "sdkwork-merchandise-service-host" }
sdkwork_merchandise_gateway_assembly = { path = "crates/sdkwork-merchandise-gateway-assembly", package = "sdkwork-merchandise-gateway-assembly" }
