[package]
name = "sdkwork-api-merchandise-assembly"
edition.workspace = true
license.workspace = true
version.workspace = true
description = "Generated API assembly for sdkwork-merchandise application HTTP plane."

[lib]
name = "sdkwork_api_merchandise_assembly"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
tokio.workspace = true
sdkwork_merchandise_service_host.workspace = true
sdkwork-routes-merchandise-backend-api.workspace = true
