[package]
name = "sdkwork-commerce-merchandise-repository-sqlx"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sdkwork_commerce_contract_service.workspace = true
sdkwork_commerce_merchandise_service.workspace = true
sdkwork_database_sqlx.workspace = true
sqlx = { workspace = true }
uuid = { workspace = true }
