[package]
name = "sdkwork-merchandise-gateway-assembly"
edition.workspace = true
license.workspace = true
version.workspace = true
description = "Generated gateway assembly for sdkwork-merchandise application HTTP plane."

[lib]
name = "sdkwork_merchandise_gateway_assembly"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
tokio.workspace = true
sdkwork_merchandise_service_host.workspace = true
sdkwork_routes_merchandise_app_api.workspace = true
sdkwork_routes_merchandise_backend_api.workspace = true
