[package]
name = "sdkwork-merchandise-service-host"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
sdkwork_merchandise_repository_sqlx.workspace = true
sdkwork_merchandise_service.workspace = true
sdkwork_merchandise_database_host.workspace = true
sdkwork_database_sqlx.workspace = true
sdkwork_database_spi.workspace = true
