[package]
name = "sdkwork-merchandise-service"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "SDKWork commerce merchandise domain rules for SPU, SKU, categories, attributes, carts, and buyer addresses."

[lib]
path = "src/lib.rs"

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
sdkwork_contract_service.workspace = true

[dev-dependencies]
tokio = { workspace = true }
