[package]
name = "sdkwork-merchandise-standalone-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true


[[bin]]
name = "sdkwork-merchandise-standalone-gateway"
path = "src/main.rs"

[dependencies]
sdkwork_merchandise_gateway_assembly.workspace = true
axum = { workspace = true }
serde_json = { workspace = true }
sdkwork_merchandise_service_host.workspace = true
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sdkwork-web-bootstrap = { workspace = true }

