[package]
name = "sdkwork-merchandise-web-support"
description = "Shared merchandise HTTP DTO, response, store-port, and backend adapter support."
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
sdkwork_contract_service.workspace = true
sdkwork_merchandise_repository_sqlx.workspace = true
sdkwork_merchandise_service.workspace = true
sdkwork-iam-context-service.workspace = true
sdkwork-web-core.workspace = true
sdkwork-utils-rust.workspace = true
uuid = { workspace = true }
