[package]
name = "sdkwork-router-merchandise-backend-api"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
axum = { workspace = true }
serde_json = { workspace = true }
sdkwork_merchandise_service_host.workspace = true
sdkwork_router_merchandise_app_api.workspace = true
sdkwork_database_sqlx.workspace = true
sdkwork-web-core.workspace = true
sdkwork-web-axum.workspace = true
sdkwork-iam-web-adapter.workspace = true
uuid = { workspace = true }
